Fixed search button distortion

--- a/queries.css
+++ b/queries.css
@@ -109,7 +109,7 @@
 
   header .search-bar button {
     height: 100%;
-    padding: 0;
+    /* padding: 0; */
   }
 
   header .search-bar {
@@ -122,8 +122,8 @@
 
   header .search-bar button img {
     margin-top: 4px;
-    width: 66%;
-    height: 66%;
+    width: 32px;
+    height: 32px;
   }
 
   header .post-button {
